<resources>
    <string name="app_name">Registration App</string>
    <string name="fullname">Full Name: </string>
    <string name="firstname">First Name </string>
    <string name="lastname">Last Name </string>
    <string name="gender">Gender: </string>
    <string name="male">Male </string>
    <string name="female">Female </string>
    <string name="studentid">Student ID </string>
    <string name="email">Email </string>
    <string name="phone">Phone Number </string>
</resources>